chore: clean spring example